--- a/user_config.DS918+.json
+++ b/user_config.DS918+.json
@@ -7,7 +7,10 @@
   },
   "synoinfo": {
     "supportsystemperature": "no",
-    "supportsystempwarning": "no"
+    "supportsystempwarning": "no",
+    "maxdisks" : "8",
+    "internalportcfg" : "0x7",
+    "esataportcfg" : "0xfff8"
   },
   "ramdisk_copy": {}
 }
