--- a/user_config.DS918+.json
+++ b/user_config.DS918+.json
@@ -8,9 +8,9 @@
   "synoinfo": {
     "supportsystemperature": "no",
     "supportsystempwarning": "no",
-    "maxdisks" : "8",
-    "internalportcfg" : "0x7",
-    "esataportcfg" : "0xfff8"
+    "maxdisks" : "16",
+    "internalportcfg" : "0xe0",
+    "esataportcfg" : "0xffe0"
   },
   "ramdisk_copy": {}
 }
