--- a/user_config.DS3615xs.json
+++ b/user_config.DS3615xs.json
@@ -3,11 +3,13 @@
     "vid": "0x46f4",
     "pid": "0x0001",
     "sn": "1130LWN123456",
-    "mac1": "001132123456"
+    "mac1": "001132123456",
+    "SataPortMap":"99"
   },
   "synoinfo": {
     "supportsystemperature": "no",
-    "supportsystempwarning": "no"
+    "supportsystempwarning": "no",
+     "maxdisks" : "16"
   },
   "ramdisk_copy": {}
 }
