--- a/user_config.DS918+.json
+++ b/user_config.DS918+.json
@@ -8,8 +8,7 @@
   "synoinfo": {
     "supportsystemperature": "no",
     "supportsystempwarning": "no",
-    "maxdisks" : "8",
-
+    "maxdisks" : "12"
   },
   "ramdisk_copy": {}
 }
